--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1> <img src="../assets/images/burger.png" style="width:100px;height:100px;"> 
+                <h1> <img src="assets/images/burger.png" style="width:100px;height:100px;"> 
                     Let's eat!
-                    <img src="../assets/images/lightbulb.png" style="width:100px;height:100px;">
+                    <img src="assets/images/lightbulb.png" style="width:100px;height:100px;">
                 </h1>
             </div>
         </div>
@@ -43,16 +43,16 @@
                     </div>
                     
                         <div id="first-crystals">
-                            <img src="../assets/images/pizza.png" class="crystal-image">
+                            <img src="assets/images/pizza.png" class="crystal-image">
                         </div>
                         <div id="second-crystals">
-                            <img src="../assets/images/frenchfries.png" class="crystal-image">
+                            <img src="assets/images/frenchfries.png" class="crystal-image">
                         </div>
                         <div id="third-crystals">
-                            <img src="../assets/images/beer.png" class="crystal-image">
+                            <img src="assets/images/beer.png" class="crystal-image">
                         </div>
                         <div id="fourth-crystals">
-                            <img src="../assets/images/wine.png" class="crystal-image">
+                            <img src="assets/images/wine.png" class="crystal-image">
                         </div>
                     
                     <div class="col-lg-6">
